<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="qq.app01.com.a20160808guoyang.TCXT">

    <RelativeLayout
        android:contentDescription="@string/app_name"
        android:id="@+id/R1"
        android:background="@color/aa"
        android:layout_width="match_parent"
        android:layout_height="220sp">
        <ImageView
            android:id="@+id/imageview"
            android:layout_marginTop="10sp"
            android:layout_marginStart="20sp"
            android:onClick="finsh"
            android:contentDescription="@string/app_name"
            android:background="@drawable/fanhui"
            android:layout_width="20sp"
            android:layout_height="25sp" />
        <ImageView
            android:layout_marginEnd="20sp"
            android:layout_marginTop="10sp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/xuanxiangka"
            android:layout_width="20sp"
            android:layout_alignParentRight="true"
            android:layout_height="25sp" />
        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/Im1"
            android:layout_marginTop="30sp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"
            android:layout_width="80sp"
            android:layout_height="80sp" />
        <TextView
            android:textColor="@color/bb"
            android:layout_below="@id/Im1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/finish"
            android:textSize="32sp"
            android:layout_marginTop="30sp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="75sp"
        android:id="@+id/R2"
        android:layout_below="@id/R1"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">
            <Button
                android:textSize="17sp"
                android:textColor="@color/bb"
                android:background="@drawable/shape6"
                android:id="@+id/tuichu"
                android:text="@string/ISfinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:layout_centerHorizontal="true"
                android:layout_marginTop="55sp"
                android:background="@drawable/shape2"
                android:layout_below="@id/tuichu"
                android:id="@+id/IS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IS"
                />
           <Button
               android:layout_centerHorizontal="true"
               android:background="@drawable/shape7"
               android:layout_marginTop="35sp"
               android:layout_below="@+id/IS"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/No"
               />
    </RelativeLayout>
</RelativeLayout>
