<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name"
    tools:context=".xuanxiu">

     <android.support.v7.widget.Toolbar
         android:background="@color/aa"
         android:layout_width="match_parent"
         android:contentDescription="@string/app_name"
         android:layout_height="wrap_content">
     </android.support.v7.widget.Toolbar>
         <RelativeLayout
             android:contentDescription="@string/app_name"
             android:id="@id/R1"
             android:background="@color/aa"
             android:layout_width="match_parent"
             android:layout_height="220sp">
             <ImageView
                 android:id="@+id/imageview"
                 android:layout_marginTop="10sp"
                 android:layout_marginStart="20sp"
                 android:onClick="finsh"
                 android:contentDescription="@string/app_name"
                 android:background="@drawable/fanhui"
                 android:layout_width="20sp"
                 android:layout_height="25sp" />
             <ImageView
                 android:layout_marginEnd="20sp"
                 android:layout_marginTop="10sp"
                 android:contentDescription="@string/app_name"
                 android:background="@drawable/xuanxiangka"
                 android:layout_width="20sp"
                 android:layout_alignParentRight="true"
                 android:layout_height="25sp" />
             <ImageView
                 android:contentDescription="@string/app_name"
                 android:id="@+id/Im1"
                 android:layout_marginTop="30sp"
                 android:layout_centerHorizontal="true"
                 android:src="@drawable/logo"
                 android:layout_width="80sp"
                 android:layout_height="80sp" />
             <TextView
                 android:textColor="@color/bb"
                 android:layout_below="@id/Im1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:text="@string/text1"
                 android:textSize="32sp"
                 android:layout_marginTop="30sp"
                 />
         </RelativeLayout>
    <RelativeLayout
        android:id="@+id/R6"
        android:layout_below="@id/R1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
         <RelativeLayout
             android:id="@+id/R2"
             android:layout_width="match_parent"
             android:gravity="center"
             android:layout_marginTop="70sp"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_marginTop="8sp"
                 android:textColor="@color/aa"
                 android:id="@+id/name"
                 android:textSize="22sp"
                 android:text="@string/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
             <EditText
                 android:id="@+id/name_edit"
                 android:layout_width="150sp"
                 android:layout_height="38sp"
                 android:layout_toEndOf="@id/name"
                 android:background="@drawable/shape"
                 />
         </RelativeLayout>
       <RelativeLayout
           android:id="@+id/R3"
           android:layout_below="@id/R2"
           android:layout_marginTop="30sp"
           android:gravity="center"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:id="@+id/sex"
               android:layout_marginStart="70sp"
               android:textColor="@color/aa"
               android:textSize="22sp"
               android:text="@string/sex"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />
           <RadioGroup
               android:gravity="center_horizontal"
                android:id="@+id/group"
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/boy"
                    android:layout_marginStart="30sp"
                   android:text="@string/boy"
                    android:textSize="20sp"
                    android:textColor="@color/aa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
               <RadioButton

                   android:id="@+id/gril"
                   android:text="@string/girs"
                   android:textColor="@color/aa"
                   android:layout_marginStart="15sp"
                   android:textSize="20sp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
           </RadioGroup>
       </RelativeLayout>
    <RelativeLayout
        android:id="@+id/R4"
        android:layout_below="@id/R3"
        android:layout_marginTop="30sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="8sp"
            android:id="@+id/age"
            android:hint="@string/age"
            android:textSize="22sp"
             android:textColorHint="@color/aa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="number"
            android:id="@+id/age_edit"
            android:layout_width="150sp"
            android:layout_height="38sp"
            android:layout_toEndOf="@id/age"
            android:background="@drawable/shape"
            />
    </RelativeLayout>
 </RelativeLayout>
              <RelativeLayout
                  android:id="@+id/R5"
                  android:layout_centerHorizontal="true"
                  android:layout_below="@id/R6"
                  android:layout_marginTop="60sp"
                  android:layout_width="wrap_content"
                  android:background="@drawable/shape2"
                  android:layout_height="wrap_content">
                  <Button
                      android:onClick="onClick"
                      android:id="@+id/tijiao"
                      android:textColor="@color/bb"
                      android:textSize="25sp"
                      android:background="@drawable/shape5"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:hint="@string/tijiao"/>
              </RelativeLayout>


</RelativeLayout>
