<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="qq.app01.com.a20160808guoyang.xuanxiu3">

    <RelativeLayout
        android:contentDescription="@string/app_name"
        android:id="@+id/R1"
        android:background="@color/aa"
        android:layout_width="match_parent"
        android:layout_height="220sp">
        <ImageView
            android:id="@+id/imageview"
            android:layout_marginTop="10sp"
            android:layout_marginStart="20sp"
            android:onClick="finsh"
            android:contentDescription="@string/app_name"
            android:background="@drawable/fanhui"
            android:layout_width="20sp"
            android:layout_height="25sp" />
        <ImageView
            android:layout_marginEnd="20sp"
            android:layout_marginTop="10sp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/xuanxiangka"
            android:layout_width="20sp"
            android:layout_alignParentRight="true"
            android:layout_height="25sp" />
        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/Im1"
            android:layout_marginTop="30sp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"
            android:layout_width="80sp"
            android:layout_height="80sp" />
        <TextView
            android:textColor="@color/bb"
            android:layout_below="@id/Im1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/tianjia1"
            android:textSize="22sp"
            android:layout_marginTop="30sp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@id/R1"
        android:layout_marginTop="60sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:textSize="30sp"
            android:id="@+id/add_succse"
            android:text="@string/add_succse"
            android:textColor="@color/bb"
            android:background="@drawable/shape2"
            android:layout_width="180sp"
            android:layout_height="70sp" />
    </RelativeLayout>
</RelativeLayout>
