<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="qq.app01.com.a20160808guoyang.MainActivity">

      <android.support.v7.widget.Toolbar
          android:contentDescription="@string/app_name"
          android:layout_width="match_parent"
          android:background="@color/aa"
          android:id="@+id/d0"
          android:layout_height="wrap_content">
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="200sp">
              <ImageView
                  android:contentDescription="@string/app_name"
                  android:id="@+id/d1"
                  android:layout_width="80sp"
                  android:layout_height="80sp"
                  android:background="@drawable/logo"
                  android:layout_centerHorizontal="true"
                  android:layout_marginTop="30sp"
                  />
             <ImageView
                 android:contentDescription="@string/app_name"
                 android:layout_marginTop="30sp"
                 android:layout_below="@+id/d1"
                 android:layout_width="230sp"
                 android:layout_height="40sp"
                 android:background="@drawable/ziti"
                 android:layout_centerHorizontal="true"
                 />
          </RelativeLayout>
      </android.support.v7.widget.Toolbar>
        <RelativeLayout
            android:layout_below="@id/d0"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/R1"
                android:layout_marginTop="50sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:id="@+id/Im1"
                    android:layout_marginStart="60sp"
                    android:src="@drawable/xxkc"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    />
                <TextView
                    android:contentDescription="@string/app_name"
                    android:id="@+id/t1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/text1"
                    android:layout_marginTop="5sp"
                    android:textColor="@color/aa"
                    android:layout_centerHorizontal="true"
                    android:onClick="onClick"
                    />
            </RelativeLayout>
     <RelativeLayout
         android:id="@+id/R2"
            android:layout_below="@id/R1"
            android:layout_marginTop="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/Im2"
                android:layout_marginStart="60sp"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:src="@drawable/kcxx"
                />
            <TextView
                android:contentDescription="@string/app_name"
                android:id="@+id/t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/aa"
                android:layout_centerHorizontal="true"
                android:onClick="onClick"
                android:text="@string/text2"
                />
        </RelativeLayout>
            <RelativeLayout
                android:id="@+id/R3"
                android:layout_below="@id/R2"
                android:layout_marginTop="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:id="@+id/Im3"
                    android:layout_marginStart="60sp"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:src="@drawable/xsxx"
                    />
                <TextView
                    android:id="@+id/t3"
                    android:onClick="onClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textColor="@color/aa"
                    android:layout_centerHorizontal="true"
                    android:text="@string/text3"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/R4"
                android:layout_below="@id/R3"
                android:layout_marginTop="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:id="@+id/Im4"
                    android:layout_marginStart="60sp"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:src="@drawable/xxkcxx"
                    />
                <TextView
                    android:id="@+id/t4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textColor="@color/aa"
                    android:onClick="onClick"
                    android:layout_centerHorizontal="true"
                    android:text="@string/text4"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/R5"
                android:layout_below="@+id/R4"
                android:layout_marginTop="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:contentDescription="@string/app_name"
                    android:id="@+id/Im5"
                    android:layout_marginStart="60sp"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:src="@drawable/bz"
                    />
                <TextView
                    android:id="@+id/t5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:onClick="onClick"
                    android:textColor="@color/aa"
                    android:layout_centerHorizontal="true"
                    android:text="@string/text5"
                    />
            </RelativeLayout>
      <RelativeLayout
                android:layout_below="@id/R5"
                android:layout_marginTop="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/Im6"
                android:layout_marginStart="60sp"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:src="@drawable/tcxt"
                />
                <TextView
                android:id="@+id/t6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/aa"
                    android:onClick="onClick"
                android:layout_centerHorizontal="true"
                android:text="@string/text6"
                />
            </RelativeLayout>
        </RelativeLayout>
</RelativeLayout>
